--- a/data/fixtures/recorded/actions/snippets/snipFunkHelloWorld2.yml
+++ b/data/fixtures/recorded/actions/snippets/snipFunkHelloWorld2.yml
@@ -5,11 +5,14 @@ command:
   action:
     name: insertSnippet
     snippetDescription:
-      type: named
-      name: functionDeclaration
-      substitutions: {name: hello world}
+      type: custom
+      body: "function $name($parameterList) {\n\t$body\n}"
+      scopeTypes:
+        - {type: statement}
+      substitutions: {name: hello_world}
     destination: {type: implicit}
   usePrePhraseSnapshot: false
+spokenFormError: custom insertion snippet
 initialState:
   documentContents: ""
   selections:
@@ -17,15 +20,16 @@ initialState:
       active: {line: 0, character: 0}
 finalState:
   documentContents: |-
-    def hello_world():
+    function hello_world() {
         
+    }
   selections:
-    - anchor: {line: 0, character: 16}
-      active: {line: 0, character: 16}
+    - anchor: {line: 0, character: 21}
+      active: {line: 0, character: 21}
   thatMark:
     - type: UntypedTarget
       contentRange:
         start: {line: 0, character: 0}
-        end: {line: 1, character: 4}
+        end: {line: 2, character: 1}
       isReversed: false
       hasExplicitRange: true
