--- a/data/fixtures/recorded/actions/snippets/snipFunkAfterThis5.yml
+++ b/data/fixtures/recorded/actions/snippets/snipFunkAfterThis5.yml
@@ -4,7 +4,11 @@ command:
   spokenForm: snippet funk after this
   action:
     name: insertSnippet
-    snippetDescription: {type: named, name: functionDeclaration}
+    snippetDescription:
+      type: custom
+      body: "$name($parameterList) {\n\t$body\n}"
+      scopeTypes:
+        - {type: statement}
     destination:
       type: primitive
       insertionMode: after
@@ -12,7 +16,7 @@ command:
         type: primitive
         mark: {type: cursor}
   usePrePhraseSnapshot: true
-spokenFormError: named insertion snippet
+spokenFormError: custom insertion snippet
 initialState:
   documentContents: |-
     class Aaa {
@@ -24,4 +28,23 @@ initialState:
     - anchor: {line: 2, character: 8}
       active: {line: 2, character: 8}
   marks: {}
-thrownError: {name: Error}
+finalState:
+  documentContents: |-
+    class Aaa {
+        bbb() {
+            
+        }
+        () {
+            
+        }
+    }
+  selections:
+    - anchor: {line: 4, character: 4}
+      active: {line: 4, character: 4}
+  thatMark:
+    - type: UntypedTarget
+      contentRange:
+        start: {line: 4, character: 4}
+        end: {line: 6, character: 5}
+      isReversed: false
+      hasExplicitRange: true
