--- a/data/fixtures/recorded/actions/snippets/snipFunkBeforeThis4.yml
+++ b/data/fixtures/recorded/actions/snippets/snipFunkBeforeThis4.yml
@@ -6,7 +6,7 @@ command:
     name: insertSnippet
     snippetDescription:
       type: custom
-      body: "function $name($parameterList) {\n\t$body\n}"
+      body: "$name($parameterList) {\n\t$body\n}"
       scopeTypes:
         - {type: namedFunction}
         - {type: statement}
@@ -32,7 +32,7 @@ initialState:
 finalState:
   documentContents: |-
     class Aaa {
-        function () {
+        () {
             
         }
 
@@ -41,8 +41,8 @@ finalState:
         }
     }
   selections:
-    - anchor: {line: 1, character: 13}
-      active: {line: 1, character: 13}
+    - anchor: {line: 1, character: 4}
+      active: {line: 1, character: 4}
   thatMark:
     - type: UntypedTarget
       contentRange:
