--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,7 +107,7 @@ jobs:
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Run neovim lua lint (Linux)
-      - uses: ./.github/actions/lint-lua-ls/
+        uses: ./.github/actions/lint-lua-ls/
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Create vscode dist that can be installed locally
@@ -121,7 +121,9 @@ jobs:
           pat: none
           packagePath: packages/cursorless-vscode/dist
           dryRun: true
-      - run: mv ${{ steps.createVsix.outputs.vsixPath }} cursorless-development.vsix
+
+      - name: Rename vsix
+        run: mv ${{ steps.createVsix.outputs.vsixPath }} cursorless-development.vsix
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Upload vsix
