--- a/.github/workflows/pr-description.yaml
+++ b/.github/workflows/pr-description.yaml
@@ -5,24 +5,24 @@ on:
     types: [opened, edited, reopened]
 
 jobs:
-  validate-pr-description:
-    name: Validate Description
+  validate-pr-description:  
     runs-on: ubuntu-latest
     steps:
     - name: Set up workspace
       uses: actions/checkout@v2
 
-    - name: Validate
+    - name: Validate description
       run: |
-        # Ensure jq is installed
-        # sudo apt-get install jq
-
-        # Fetch PR description using jq
+        # Fetch PR description from env with jq
         PR_DESCRIPTION=$(jq -r ".pull_request.body" "$GITHUB_EVENT_PATH")
         KEYWORD="REQUIRED_KEYWORD"
 
-        # Users should remove the welcome comment
+        # Ensure PR author removed the welcome comment
         if [[ $PR_DESCRIPTION = *"<!--"* ]] || [[ $PR_DESCRIPTION = *"-->"* ]]; then
           echo "FAILED: Please remove the welcome comment from your PR description."
           exit 1
+        else
+          echo "OK: Welcome comment is removed your PR description."
         fi
+
+        echo "PASS: All checks OK!"
