--- a/.github/workflows/pr-description.yaml
+++ b/.github/workflows/pr-description.yaml
@@ -3,6 +3,8 @@ name: PR Description
 on:
   pull_request:
     types: [opened, edited, reopened]
+  merge_group:
+    branches: [main]
 
 jobs:
   validate-pr-description:
