ci: try upgrading corepack

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Upgrade Corepack
+        run: npm install --global corepack@latest
+
       - name: Enable Corepack
         run: corepack enable
 
