--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Upgrade Corepack
-        run: npm install --global corepack@0.31.0
+        run: npm install corepack@0.31.0
 
       - name: Enable Corepack
         run: corepack enable
