--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      # FIXME: https://github.com/cursorless-dev/cursorless/issues/2817
+      - name: Upgrade Corepack
+        run: npm install --global corepack@0.31.0
+
       - name: Enable Corepack
         run: corepack enable
 
