--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
 
       # FIXME: https://github.com/cursorless-dev/cursorless/issues/2817
       - name: Upgrade Corepack
-        run: npm install --global corepack@0.31.0
+        run: npm install --global --force corepack@0.31.0
 
       - name: Enable Corepack
         run: corepack enable
