ci: try upgrading corepack (#2816)
`corepack@latest` is `corepack@0.31.0` which fixes the issue. Once this
version is baked into the operating system image we use we can remove
this override.

Fixes https://github.com/cursorless-dev/cursorless/issues/2817

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # FIXME: https://github.com/cursorless-dev/cursorless/issues/2817
+      - name: Upgrade Corepack
+        run: npm install --global --force corepack@0.31.0
+
       - name: Enable Corepack
         run: corepack enable
 
