--- a/data/fixtures/recorded/implicitExpansion/funkWrapPastInk.yml
+++ b/data/fixtures/recorded/implicitExpansion/funkWrapPastInk.yml
@@ -39,3 +39,11 @@ finalState:
   selections:
     - anchor: {line: 0, character: 9}
       active: {line: 0, character: 9}
+  thatMark:
+    - type: UntypedTarget
+      contentRange:
+        start: {line: 0, character: 0}
+        end: {line: 4, character: 1}
+      isReversed: false
+      hasExplicitRange: true
+
