--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -27,12 +27,8 @@ jobs:
         with:
           python-version: 3.x
 
-      # FIXME: https://github.com/cursorless-dev/cursorless/issues/2817
-      - name: Upgrade Corepack
-        run: npm install --global corepack@0.31.0
-
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
