--- a/packages/cursorless-vscode-tutorial-webview/package.json
+++ b/packages/cursorless-vscode-tutorial-webview/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
+    "@tailwindcss/cli": "4.0.12",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@types/vscode-webview": "1.57.5",
