--- a/packages/cheatsheet-local/package.json
+++ b/packages/cheatsheet-local/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@effortlessmotion/html-webpack-inline-source-plugin": "1.0.3",
+    "@tailwindcss/postcss": "4.0.13",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.2.0",
     "@types/jest": "29.5.14",
