--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "8.1.0",
+    "@tailwindcss/postcss": "4.0.13",
     "@types/mdx": "2.0.13",
     "@types/node": "20.16.0",
     "@types/react": "19.0.10",
