--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -48,7 +48,7 @@
   },
   "postcss": {
     "plugins": {
-      "tailwindcss": {},
+      "@tailwindcss/postcss": {},
       "autoprefixer": {}
     }
   },
