--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/compat": "1.2.7",
+    "@eslint/eslintrc": "3.3.0",
+    "@eslint/js": "9.22.0",
     "@pnpm/meta-updater": "2.0.5",
     "@types/node": "20.16.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
