--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -23,6 +23,9 @@
     "react-player": "2.16.0"
   },
   "devDependencies": {
+    "@eslint/compat": "1.2.7",
+    "@eslint/eslintrc": "3.3.0",
+    "@eslint/js": "9.22.0",
     "@svgr/webpack": "8.1.0",
     "@tailwindcss/postcss": "4.0.13",
     "@types/mdx": "2.0.13",
