--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "devDependencies": {
     "@pnpm/meta-updater": "2.0.3",
     "@types/node": "20.16.0",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
     "esbuild": "^0.25.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.9.0",
+    "eslint-import-resolver-typescript": "3.6.3",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-mocha": "10.5.0",
     "eslint-plugin-unicorn": "56.0.0",
@@ -43,7 +43,7 @@
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
     "syncpack": "13.0.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.6.3"
   },
   "pnpm": {
     "patchedDependencies": {
