chore: Add types/js-yaml dev dep to cursorless-org

--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "8.1.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/mdx": "2.0.13",
     "@types/node": "20.17.50",
     "@types/react": "19.1.6",
