--- a/packages/cursorless-neovim-e2e/package.json
+++ b/packages/cursorless-neovim-e2e/package.json
@@ -22,7 +22,7 @@
     "@types/chai": "^5.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "4.17.10",
-    "@types/sinon": "^17.0.3",
+    "@types/sinon": "17.0.4",
     "neovim": "5.3.0"
   },
   "dependencies": {
