--- a/packages/cursorless-vscode-e2e/package.json
+++ b/packages/cursorless-vscode-e2e/package.json
@@ -30,12 +30,12 @@
     "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "4.17.12",
     "@types/mocha": "^10.0.9",
-    "@types/sinon": "^17.0.3",
+    "@types/sinon": "17.0.4",
     "@types/vscode": "1.82.0",
     "chai": "^5.1.1",
     "js-yaml": "^4.1.0",
     "mocha": "^10.7.3",
-    "sinon": "^19.0.2"
+    "sinon": "20.0.0"
   },
   "types": "./out/index.d.ts",
   "type": "module"
