--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -1271,7 +1271,7 @@
     "@types/tinycolor2": "1.4.6",
     "@types/uuid": "^10.0.0",
     "@types/vscode": "1.82.0",
-    "esbuild": "^0.25.0",
+    "esbuild": "0.25.4",
     "fast-xml-parser": "^4.5.0",
     "fs-extra": "11.2.0",
     "sinon": "20.0.0"
