--- a/packages/meta-updater/package.json
+++ b/packages/meta-updater/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "4.17.12",
-    "esbuild": "^0.25.0"
+    "esbuild": "0.25.4"
   },
   "type": "module"
 }
