--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -29,7 +29,7 @@
     "@mdx-js/react": "3.0.1",
     "clsx": "^2.1.1",
     "mdast-util-find-and-replace": "^3.0.1",
-    "prism-react-renderer": "^2.4.0",
+    "prism-react-renderer": "2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "unist-util-visit": "^5.0.0"
