--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "license": "MIT",
   "devDependencies": {
     "@pnpm/meta-updater": "2.0.4",
-    "@types/node": "20.16.0",
+    "@types/node": "20.17.50",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
     "esbuild": "0.25.4",
@@ -43,7 +43,7 @@
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "syncpack": "13.0.4",
-    "typescript": "^5.6.3"
+    "typescript": "5.8.3"
   },
   "pnpm": {
     "patchedDependencies": {
