--- a/packages/cheatsheet-local/package.json
+++ b/packages/cheatsheet-local/package.json
@@ -33,7 +33,7 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.3.0",
     "@types/jest": "29.5.13",
-    "@types/node": "20.16.0",
+    "@types/node": "20.17.50",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "@types/webpack": "5.28.5",
@@ -48,7 +48,7 @@
     "tailwindcss": "3.4.14",
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
-    "typescript": "^5.6.3",
+    "typescript": "5.8.3",
     "webpack": "5.99.9",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.1"
