--- a/packages/cheatsheet/package.json
+++ b/packages/cheatsheet/package.json
@@ -45,7 +45,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "ts-jest": "29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "5.8.3"
   },
   "type": "module"
 }
