--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@svgr/webpack": "8.1.0",
     "@types/mdx": "2.0.13",
-    "@types/node": "20.16.0",
+    "@types/node": "20.17.50",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.21",
@@ -34,7 +34,7 @@
     "http-server": "14.1.1",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "5.8.3"
   },
   "license": "MIT",
   "main": "./out/index.js",
