--- a/cursorless.nvim/node/command-server/package.json
+++ b/cursorless.nvim/node/command-server/package.json
@@ -16,10 +16,10 @@
     "@types/node": "20.17.50",
     "@types/rimraf": "^3.0.0",
     "@types/vscode": "^1.53.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@typescript-eslint/eslint-plugin": "8.32.1",
+    "@typescript-eslint/parser": "8.32.1",
     "esbuild": "0.25.4",
-    "eslint": "^7.15.0",
+    "eslint": "8.57.1",
     "glob": "^7.1.6",
     "mocha": "8.1.3",
     "typescript": "5.8.3",
