--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
   "devDependencies": {
     "@pnpm/meta-updater": "2.0.4",
     "@types/node": "20.17.50",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "8.32.1",
+    "@typescript-eslint/parser": "8.32.1",
     "esbuild": "0.25.4",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "3.6.3",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-import-resolver-typescript": "4.3.5",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-mocha": "10.5.0",
-    "eslint-plugin-unicorn": "56.0.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "3.3.3",
+    "eslint-plugin-unicorn": "56.0.1",
+    "eslint-plugin-unused-imports": "4.1.4",
     "prettier-plugin-tailwindcss": "0.6.11",
+    "prettier": "3.3.3",
     "syncpack": "13.0.4",
     "typescript": "5.8.3"
   },
