--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@pnpm/meta-updater": "2.0.3",
-    "@types/node": "20.16.0",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
-    "esbuild": "^0.25.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "3.6.3",
+    "@pnpm/meta-updater": "2.0.4",
+    "@types/node": "20.17.50",
+    "@typescript-eslint/eslint-plugin": "8.32.1",
+    "@typescript-eslint/parser": "8.32.1",
+    "esbuild": "0.25.4",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-import-resolver-typescript": "4.3.5",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-mocha": "10.5.0",
-    "eslint-plugin-unicorn": "56.0.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-unicorn": "56.0.1",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.8",
-    "syncpack": "13.0.0",
-    "typescript": "^5.6.3"
+    "syncpack": "13.0.4",
+    "typescript": "5.8.3"
   },
   "pnpm": {
     "patchedDependencies": {
