--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -29,7 +29,7 @@
     "@mdx-js/react": "3.0.1",
     "clsx": "^2.1.1",
     "mdast-util-find-and-replace": "^3.0.1",
-    "prism-react-renderer": "^2.4.0",
+    "prism-react-renderer": "2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "unist-util-visit": "^5.0.0"
@@ -52,7 +52,7 @@
     "@tsconfig/docusaurus": "2.0.3",
     "@types/mdast": "4.0.4",
     "@types/react": "18.3.11",
-    "typescript": "^5.6.3",
+    "typescript": "5.8.3",
     "unified": "11.0.5"
   },
   "license": "MIT",
