--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -1265,16 +1265,16 @@
     "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "4.17.12",
     "@types/nearley": "2.11.5",
-    "@types/node": "20.16.0",
+    "@types/node": "20.17.50",
     "@types/semver": "^7.5.8",
-    "@types/sinon": "^17.0.3",
+    "@types/sinon": "17.0.4",
     "@types/tinycolor2": "1.4.6",
     "@types/uuid": "^10.0.0",
     "@types/vscode": "1.82.0",
-    "esbuild": "^0.25.0",
+    "esbuild": "0.25.4",
     "fast-xml-parser": "^4.5.0",
     "fs-extra": "11.2.0",
-    "sinon": "^19.0.2"
+    "sinon": "20.0.0"
   },
   "dependencies": {
     "@cursorless/common": "workspace:*",
