Add llms.txt generation following llms.txt specification
- Generate llms.txt as directory page with Core Documentation (root README) and Optional sections
- Generate llms-full.txt with complete user documentation concatenated
- Generate individual .md files for each documentation page in llms/ subdirectory
- Focus on user documentation only (exclude contributing docs)
- Follow llms.txt format specification from https://llmstxt.org/
- Integrate into build process via 'pnpm generate-llms' command

Fixes #2873

Co-Authored-By: sketch <hello@sketch.dev>
Change-ID: s30ae64e7cbc2b4fdk

--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -5,15 +5,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && pnpm generate-llms",
     "start": "http-server out -a 127.0.0.1 -p 8080",
     "lint": "next lint",
     "compile": "tsc --build",
     "watch": "tsc --build --watch",
-    "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
+    "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build",
+    "generate-llms": "my-ts-node ./src/scripts/generateLlmsTxt.ts"
   },
   "dependencies": {
     "@cursorless/cheatsheet": "workspace:*",
+    "@cursorless/common": "workspace:*",
     "@mdx-js/loader": "3.0.1",
     "@mdx-js/react": "3.0.1",
     "@next/mdx": "15.3.2",
