--- a/packages/cursorless-org/tsconfig.json
+++ b/packages/cursorless-org/tsconfig.json
@@ -23,6 +23,9 @@
   "references": [
     {
       "path": "../cheatsheet"
+    },
+    {
+      "path": "../common"
     }
   ],
   "exclude": ["node_modules"]
