--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "fix:syncpack": "pnpm syncpack fix-mismatches",
     "init-vscode-sandbox": "pnpm --filter=@cursorless/cursorless-vscode init-launch-sandbox",
     "lint:meta": "pnpm run meta-updater:base --test",
-    "lint:ts": "eslint packages --ext ts,tsx,mts",
+    "lint:ts": "cross-env ESLINT_USE_FLAT_CONFIG=false eslint packages --ext ts,tsx,mts",
     "lint": "pnpm run lint:meta && syncpack list-mismatches && pnpm run lint:ts",
     "meta-updater:base": "pnpm --filter=@cursorless/meta-updater build && meta-updater",
     "preinstall": "npx only-allow pnpm",
@@ -32,16 +32,17 @@
     "@types/node": "20.17.50",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
+    "cross-env": "7.0.3",
     "esbuild": "0.25.4",
-    "eslint": "8.57.1",
     "eslint-config-prettier": "10.1.5",
-    "eslint-import-resolver-typescript": "4.3.5",
+    "eslint-import-resolver-typescript": "4.4.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-mocha": "10.5.0",
     "eslint-plugin-unicorn": "56.0.1",
     "eslint-plugin-unused-imports": "4.1.4",
+    "eslint": "9.27.0",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "prettier": "3.3.3",
+    "prettier": "3.5.3",
     "syncpack": "13.0.4",
     "typescript": "5.8.3"
   },
