--- a/packages/cursorless-tutorial/package.json
+++ b/packages/cursorless-tutorial/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-engine": "workspace:*",
-    "immer": "^10.1.1",
-    "lodash-es": "^4.17.21"
+    "immer": "10.1.1",
+    "lodash-es": "4.17.21"
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.12"
