--- a/packages/cursorless-everywhere-talon-core/package.json
+++ b/packages/cursorless-everywhere-talon-core/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-engine": "workspace:*",
-    "lodash-es": "^4.17.21",
-    "vscode-uri": "^3.0.8"
+    "lodash-es": "4.17.21",
+    "vscode-uri": "3.1.0"
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.12"
