--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -1262,18 +1262,18 @@
   },
   "devDependencies": {
     "@types/fs-extra": "11.0.4",
-    "@types/js-yaml": "^4.0.9",
+    "@types/js-yaml": "4.0.9",
     "@types/lodash-es": "4.17.12",
     "@types/nearley": "2.11.5",
     "@types/node": "20.17.50",
-    "@types/semver": "^7.5.8",
+    "@types/semver": "7.7.0",
     "@types/sinon": "17.0.4",
     "@types/tinycolor2": "1.4.6",
-    "@types/uuid": "^10.0.0",
+    "@types/uuid": "10.0.0",
     "@types/vscode": "1.82.0",
     "esbuild": "0.25.4",
-    "fast-xml-parser": "^4.5.0",
-    "fs-extra": "11.2.0",
+    "fast-xml-parser": "5.2.3",
+    "fs-extra": "11.3.0",
     "sinon": "20.0.0"
   },
   "dependencies": {
@@ -1284,16 +1284,16 @@
     "@cursorless/node-common": "workspace:*",
     "@cursorless/test-case-recorder": "workspace:*",
     "@cursorless/vscode-common": "workspace:*",
-    "glob": "^11.0.0",
-    "itertools": "^2.3.2",
-    "lodash-es": "^4.17.21",
+    "glob": "11.0.0",
+    "itertools": "2.4.1",
+    "lodash-es": "4.17.21",
     "nearley": "2.20.1",
-    "semver": "^7.6.3",
+    "semver": "7.7.2",
     "talon-snippets": "1.3.0",
     "tinycolor2": "1.6.0",
     "trie-search": "2.0.0",
-    "uuid": "^10.0.0",
-    "vscode-uri": "^3.0.8"
+    "uuid": "11.1.0",
+    "vscode-uri": "3.1.0"
   },
   "type": "module"
 }
