--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,9 +106,9 @@ jobs:
       #   uses: ./.github/actions/test-neovim-lua/
       #   if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
-      - name: Run neovim lua lint (Linux)
-        uses: ./.github/actions/lint-lua-ls/
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
+      # - name: Run neovim lua lint (Linux)
+      #   uses: ./.github/actions/lint-lua-ls/
+      #   if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
