--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -18,21 +18,21 @@
     "clean": "pnpm clear && rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
-    "@algolia/client-search": "5.8.1",
+    "@algolia/client-search": "5.25.0",
     "@cursorless/common": "workspace:*",
-    "@docsearch/react": "3.6.2",
-    "@docusaurus/core": "3.7.0",
-    "@docusaurus/preset-classic": "3.7.0",
-    "@docusaurus/theme-classic": "3.7.0",
-    "@docusaurus/theme-common": "3.7.0",
-    "@docusaurus/theme-search-algolia": "3.7.0",
-    "@mdx-js/react": "3.0.1",
-    "clsx": "^2.1.1",
-    "mdast-util-find-and-replace": "^3.0.1",
+    "@docsearch/react": "3.9.0",
+    "@docusaurus/core": "3.8.0",
+    "@docusaurus/preset-classic": "3.8.0",
+    "@docusaurus/theme-classic": "3.8.0",
+    "@docusaurus/theme-common": "3.8.0",
+    "@docusaurus/theme-search-algolia": "3.8.0",
+    "@mdx-js/react": "3.1.0",
+    "clsx": "2.1.1",
+    "mdast-util-find-and-replace": "3.0.2",
     "prism-react-renderer": "2.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "unist-util-visit": "^5.0.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "unist-util-visit": "5.0.0"
   },
   "browserslist": {
     "production": [
@@ -47,11 +47,11 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/types": "3.7.0",
+    "@docusaurus/module-type-aliases": "3.8.0",
+    "@docusaurus/types": "3.8.0",
     "@tsconfig/docusaurus": "2.0.3",
     "@types/mdast": "4.0.4",
-    "@types/react": "18.3.11",
+    "@types/react": "19.1.6",
     "typescript": "5.8.3",
     "unified": "11.0.5"
   },
