--- a/packages/cursorless-vscode-tutorial-webview/package.json
+++ b/packages/cursorless-vscode-tutorial-webview/package.json
@@ -22,14 +22,14 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
     "@types/vscode-webview": "1.57.5",
     "tailwindcss": "3.4.14"
   },
   "dependencies": {
     "@cursorless/common": "workspace:*",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   }
 }
