--- a/packages/neovim-common/package.json
+++ b/packages/neovim-common/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Common utility functions usable anywhere that neovim api is available",
   "main": "./out/index.js",
+  "type": "module",
   "scripts": {
     "compile:tsc": "tsc --build",
     "compile:esbuild": "esbuild ./src/index.ts --sourcemap --format=esm --bundle --packages=external --outfile=./out/index.js",
@@ -26,12 +27,13 @@
     "@cursorless/common": "workspace:*",
     "@cursorless/neovim-registry": "workspace:*",
     "@cursorless/node-common": "workspace:*",
-    "@types/lodash": "4.17.17",
-    "@types/uuid": "10.0.0",
-    "@types/vscode": "1.82.0",
     "lodash": "4.17.21",
     "neovim": "5.3.0",
     "vscode-uri": "3.1.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/lodash": "4.17.17",
+    "@types/uuid": "10.0.0",
+    "@types/vscode": "1.82.0"
+  }
 }
