--- a/packages/cursorless-neovim-e2e/package.json
+++ b/packages/cursorless-neovim-e2e/package.json
@@ -2,6 +2,9 @@
   "name": "@cursorless/cursorless-neovim-e2e",
   "version": "1.0.0",
   "description": "Our neovim end-to-end tests",
+  "license": "MIT",
+  "type": "module",
+  "types": "./out/index.d.ts",
   "private": true,
   "main": "./out/index.js",
   "exports": {
@@ -15,16 +18,6 @@
     "watch": "tsc --build --watch",
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/chai": "5.2.2",
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash": "4.17.17",
-    "@types/sinon": "17.0.4",
-    "neovim": "5.3.0"
-  },
   "dependencies": {
     "@cursorless/common": "workspace:*",
     "@cursorless/neovim-common": "workspace:*",
@@ -32,6 +25,11 @@
     "@cursorless/node-common": "workspace:*",
     "@cursorless/test-case-recorder": "workspace:*"
   },
-  "types": "./out/index.d.ts",
-  "type": "module"
+  "devDependencies": {
+    "@types/chai": "5.2.2",
+    "@types/js-yaml": "4.0.9",
+    "@types/lodash": "4.17.17",
+    "@types/sinon": "17.0.4",
+    "neovim": "5.3.0"
+  }
 }
