--- a/packages/vscode-common/package.json
+++ b/packages/vscode-common/package.json
@@ -2,7 +2,16 @@
   "name": "@cursorless/vscode-common",
   "version": "0.1.0",
   "description": "Common utility functions usable anywhere that VSCode api is available",
+  "license": "MIT",
+  "type": "module",
+  "types": "./out/index.d.ts",
   "main": "./out/index.js",
+  "exports": {
+    ".": {
+      "cursorless:bundler": "./src/index.ts",
+      "default": "./out/index.js"
+    }
+  },
   "scripts": {
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build",
     "compile:tsc": "tsc --build",
@@ -12,21 +21,10 @@
     "watch:esbuild": "pnpm compile:esbuild --watch",
     "watch": "pnpm run --filter @cursorless/vscode-common --parallel '/^watch:.*/'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@cursorless/common": "workspace:*"
   },
   "devDependencies": {
     "@types/vscode": "1.82.0"
-  },
-  "types": "./out/index.d.ts",
-  "exports": {
-    ".": {
-      "cursorless:bundler": "./src/index.ts",
-      "default": "./out/index.js"
-    }
-  },
-  "type": "module"
+  }
 }
