--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -1,8 +1,38 @@
 {
   "name": "@cursorless/cursorless-vscode",
   "displayName": "Cursorless",
+  "version": "1.0.0",
   "description": "Structural voice coding at the speed of thought",
+  "license": "MIT",
+  "publisher": "pokey",
+  "homepage": "https://www.cursorless.org/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cursorless-dev/cursorless.git"
+  },
+  "funding": "https://github.com/sponsors/cursorless-dev",
+  "sponsor": {
+    "url": "https://github.com/sponsors/cursorless-dev"
+  },
   "private": true,
+  "type": "module",
+  "main": "./extension.cjs",
+  "engines": {
+    "vscode": "^1.82.0"
+  },
+  "extensionKind": [
+    "ui",
+    "workspace"
+  ],
+  "categories": [
+    "Other"
+  ],
+  "keywords": [
+    "Voice coding"
+  ],
+  "activationEvents": [
+    "onLanguage"
+  ],
   "icon": "images/logo.png",
   "galleryBanner": {
     "color": "#00001A",
@@ -20,34 +50,6 @@
       "description": "Tests"
     }
   ],
-  "version": "1.0.0",
-  "publisher": "pokey",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cursorless-dev/cursorless.git"
-  },
-  "homepage": "https://www.cursorless.org/",
-  "engines": {
-    "vscode": "^1.82.0"
-  },
-  "extensionKind": [
-    "ui",
-    "workspace"
-  ],
-  "categories": [
-    "Other"
-  ],
-  "keywords": [
-    "Voice coding"
-  ],
-  "extensionDependencies": [
-    "pokey.parse-tree"
-  ],
-  "activationEvents": [
-    "onLanguage"
-  ],
-  "main": "./extension.cjs",
   "capabilities": {
     "untrustedWorkspaces": {
       "supported": true
@@ -1233,10 +1235,6 @@
       ]
     }
   },
-  "sponsor": {
-    "url": "https://github.com/sponsors/cursorless-dev"
-  },
-  "funding": "https://github.com/sponsors/cursorless-dev",
   "scripts": {
     "build": "pnpm run esbuild:prod && pnpm -F cheatsheet-local build:prod && pnpm -F cursorless-vscode-tutorial-webview build:prod && pnpm run populate-dist",
     "build:dev": "pnpm generate-grammar && pnpm run esbuild && pnpm -F cheatsheet-local build && pnpm -F cursorless-vscode-tutorial-webview build && pnpm run populate-dist",
@@ -1262,22 +1260,9 @@
     "watch": "tsc --build --watch",
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
-  "devDependencies": {
-    "@types/fs-extra": "11.0.4",
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "@types/nearley": "2.11.5",
-    "@types/node": "20.17.50",
-    "@types/semver": "7.7.0",
-    "@types/sinon": "17.0.4",
-    "@types/tinycolor2": "1.4.6",
-    "@types/uuid": "10.0.0",
-    "@types/vscode": "1.82.0",
-    "esbuild": "0.25.5",
-    "fast-xml-parser": "5.2.3",
-    "fs-extra": "11.3.0",
-    "sinon": "20.0.0"
-  },
+  "extensionDependencies": [
+    "pokey.parse-tree"
+  ],
   "dependencies": {
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-cheatsheet": "workspace:*",
@@ -1297,5 +1282,20 @@
     "uuid": "11.1.0",
     "vscode-uri": "3.1.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/fs-extra": "11.0.4",
+    "@types/js-yaml": "4.0.9",
+    "@types/lodash-es": "4.17.12",
+    "@types/nearley": "2.11.5",
+    "@types/node": "20.17.50",
+    "@types/semver": "7.7.0",
+    "@types/sinon": "17.0.4",
+    "@types/tinycolor2": "1.4.6",
+    "@types/uuid": "10.0.0",
+    "@types/vscode": "1.82.0",
+    "esbuild": "0.25.5",
+    "fast-xml-parser": "5.2.3",
+    "fs-extra": "11.3.0",
+    "sinon": "20.0.0"
+  }
 }
