--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,7 +2,19 @@
   "name": "@cursorless/common",
   "version": "0.1.0",
   "description": "Common utilities for use anywhere in our codebase",
+  "license": "MIT",
+  "type": "module",
   "main": "./out/index.js",
+  "types": "./out/index.d.ts",
+  "bin": {
+    "my-ts-node": "./scripts/my-ts-node.js"
+  },
+  "exports": {
+    ".": {
+      "cursorless:bundler": "./src/index.ts",
+      "default": "./out/index.js"
+    }
+  },
   "scripts": {
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build",
     "compile:tsc": "tsc --build",
@@ -12,9 +24,6 @@
     "watch:esbuild": "pnpm compile:esbuild --watch",
     "watch": "pnpm run --filter @cursorless/common --parallel '/^watch:.*/'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "lodash-es": "4.17.21",
     "vscode-uri": "3.1.0"
@@ -27,16 +36,5 @@
     "fast-check": "4.1.1",
     "js-yaml": "4.1.0",
     "mocha": "11.5.0"
-  },
-  "types": "./out/index.d.ts",
-  "exports": {
-    ".": {
-      "cursorless:bundler": "./src/index.ts",
-      "default": "./out/index.js"
-    }
-  },
-  "bin": {
-    "my-ts-node": "./scripts/my-ts-node.js"
-  },
-  "type": "module"
+  }
 }
