--- a/packages/cursorless-engine/package.json
+++ b/packages/cursorless-engine/package.json
@@ -2,7 +2,16 @@
   "name": "@cursorless/cursorless-engine",
   "version": "0.1.0",
   "description": "The core Cursorless engine, which is responsible for parsing and executing commands, allocating hats, etc",
+  "license": "MIT",
+  "type": "module",
   "main": "./out/index.js",
+  "types": "./out/index.d.ts",
+  "exports": {
+    ".": {
+      "cursorless:bundler": "./src/index.ts",
+      "default": "./out/index.js"
+    }
+  },
   "scripts": {
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build",
     "compile:tsc": "tsc --build",
@@ -17,9 +26,6 @@
     "watch:esbuild": "pnpm compile:esbuild --watch",
     "watch": "pnpm run --filter @cursorless/cursorless-engine --parallel '/^watch:.*/'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@cursorless/common": "workspace:*",
     "@cursorless/node-common": "workspace:*",
@@ -45,13 +51,5 @@
     "js-yaml": "4.1.0",
     "mocha": "11.5.0",
     "sinon": "20.0.0"
-  },
-  "types": "./out/index.d.ts",
-  "exports": {
-    ".": {
-      "cursorless:bundler": "./src/index.ts",
-      "default": "./out/index.js"
-    }
-  },
-  "type": "module"
+  }
 }
