--- a/packages/neovim-registry/package.json
+++ b/packages/neovim-registry/package.json
@@ -2,7 +2,16 @@
   "name": "@cursorless/neovim-registry",
   "version": "1.0.0",
   "description": "Registry to share apis and commands between packages for neovim",
+  "license": "MIT",
+  "type": "module",
   "main": "./out/index.js",
+  "types": "./out/index.d.ts",
+  "exports": {
+    ".": {
+      "cursorless:bundler": "./src/index.ts",
+      "default": "./out/index.js"
+    }
+  },
   "scripts": {
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build",
     "compile:tsc": "tsc --build",
@@ -12,18 +21,7 @@
     "watch:esbuild": "pnpm compile:esbuild --watch",
     "watch": "pnpm run --filter @cursorless/neovim-registry --parallel '/^watch:.*/'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "types": "./out/index.d.ts",
-  "exports": {
-    ".": {
-      "cursorless:bundler": "./src/index.ts",
-      "default": "./out/index.js"
-    }
-  },
   "devDependencies": {
     "neovim": "5.3.0"
-  },
-  "type": "module"
+  }
 }
